# SIG-Guest-Languages

./: .gitignore  README.md  flake.nix
.github/: dependabot.yml
.github/actions/build-nix/: action.yml
.github/workflows/: nix.yml  test-suite.yml
docs/: subgroups.md
test-suite/: default.nix
test-suite/compose/: Cargo.toml  default.nix
test-suite/compose/src/: main.rs
test-suite/java/: README.md
test-suite/javascript/: README.md
test-suite/javascript/trivial/: trivial.js
test-suite/languages/: default.nix
test-suite/languages/java/: default.nix
test-suite/languages/java/trivial/wit/exports/guest-lang/tests/: TestImpl.java
test-suite/languages/python/: README.md
test-suite/languages/python/numbers/: config.json
test-suite/languages/python/trivial/: config.json
test-suite/languages/rust/: Cargo.toml  README.md  default.nix  rust-toolchain.toml
test-suite/languages/rust/numbers/: Cargo.toml
test-suite/languages/rust/numbers-runner/: Cargo.toml
test-suite/languages/rust/numbers-runner/src/: lib.rs
test-suite/languages/rust/numbers/src/: lib.rs
test-suite/languages/rust/trivial/: Cargo.toml
test-suite/languages/rust/trivial-runner/: Cargo.toml
test-suite/rust/: Cargo.toml  README.md  default.nix
test-suite/rust/numbers/: Cargo.toml
test-suite/rust/numbers-runner/: Cargo.toml
test-suite/rust/numbers-runner/src/: lib.rs
test-suite/rust/numbers/src/: lib.rs
test-suite/rust/trivial/: Cargo.toml
test-suite/rust/trivial-runner/: Cargo.toml
test-suite/rust/trivial-runner/src/: lib.rs
test-suite/rust/trivial/src/: lib.rs
test-suite/test-cases/: README.md  config.json  config.toml  default.nix
test-suite/test-cases/wit/: numbers.wit  trivial.wit
