[package]
name = "numbers-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "test:numbers-runner"

[package.metadata.component.target]
world = "numbers-runner"
path = "../../test-cases/wit"

[package.metadata.component.dependencies]
